--- a/content/blog/2022-05-05-e2e-cv-pt3.md
+++ b/content/blog/2022-05-05-e2e-cv-pt3.md
@@ -37,15 +37,16 @@ tags:
 
 ### Introduction
 
-In this post, we’ll focus on leveraging cloud infrastructure with CML and how to
-enable automatic reporting (with metrics, plots, and other visuals) to accompany
-every commit/pull request on GitHub.
+In this post, we’ll focus on leveraging cloud infrastructure with CML; how to
+enable automatic reporting (with metrics, plots, and other visuals) for PRs; and
+the eventual deployment process.
 
 ### Leveraging Cloud Resources with CI/CD and CML
 
 If you ever wondered if there's an easy way to quickly and easily:
 
-1. provision a powerful VM in the cloud
+1. provision a powerful VM in the cloud (training CV models often requires
+   powerful GPUs rarely available on local machines)
 2. submit your ML training job to it
 3. get the results back
 4. automatically shut down the VM without having to worry about excessive cloud
@@ -125,7 +126,7 @@ the project's lifecycle we are in:
       ```
 
    4. open a pull request and post a report to it that contains a table with
-      metrics and model outputs (segmentation masks) on a few test images:
+      metrics and model outputs on a few test images:
 
       ```bash
       ...
@@ -143,7 +144,9 @@ the project's lifecycle we are in:
       ```
 
       The report structure is fully customizable. Below is an example of what
-      the PR and the CML report would look like in this case:
+      the PR and the CML report would look like in this case. The test images
+      show (from left to right) input images, ground truth masks and prediction
+      masks.
 
       ![PR and CML report](/uploads/images/2022-05-05/pr_cml_report.png '=800')
 
@@ -158,9 +161,9 @@ the project's lifecycle we are in:
    can merge it into the development branch. This would trigger a different
    CI/CD job that will:
 
-   1. retrain the model with the new parameters (as the `dev` branch might
-      contain changes not present in the `exp` branch). This step looks almost
-      identical to the third step in the above workflow.
+   1. retrain the model if the `dev` branch contains changes not present in the
+      `exp` branch. DVC will skip this stage if that's not the case. This step
+      looks almost identical to the third step in the above workflow.
    2. deploy the web REST API application (that incorporates the new model) to a
       development endpoint on Heroku:
 
