--- a/content/blog/2022-05-04-e2e-cv-pt2.md
+++ b/content/blog/2022-05-04-e2e-cv-pt2.md
@@ -177,8 +177,7 @@ Below we can see the evolution of the key metrics and the value of the loss
 function throughout training (enabled by the earlier integration of
 [DVCLive](https://dvc.org/doc/dvclive)) for a set of selected commits.
 
-![DVCLive metrics displayed in
-Studio](/uploads/images/2022-05-04/dvc_live_studio.png '=800')
+![DVCLive metrics displayed in Studio](/uploads/images/2022-05-04/dvc_live_studio.png '=800')
 
 Now, for example, if we see that the loss function hasn't reached a plateau
 after a certain number of epochs, we'll try increasing this number. Or, even
