Restyled by prettier

--- a/content/blog/2022-05-17-test-blog.md
+++ b/content/blog/2022-05-17-test-blog.md
@@ -14,11 +14,12 @@ tags:
   - honey
 commentsUrl: https://random-url
 ---
+
 # Random Test Blog
 
 `echo "Hello"`
 
 ```javascript
-const hello = "world";
-console.log(hello);
+const hello = 'world'
+console.log(hello)
 ```
