Fix missing master references

--- a/content/blog/2020-04-30-gsod-ideas-2020.md
+++ b/content/blog/2020-04-30-gsod-ideas-2020.md
@@ -212,7 +212,7 @@ technical writer, [Jorge](https://github.com/jorgeorpinel).
    _Difficulty rating:_ Medium-Advanced
 
 1. **Javascript engine UI/UX.** Our website has custom
-   [source code](https://github.com/iterative/dvc.org/tree/master/src) we've
+   [source code](https://github.com/iterative/dvc.org/tree/main/src) we've
    developed over the years to host our landing pages, docs, and blog all in a
    high-performance, advanced static site (Node.js, Gatsby, React, Typescript).
    We have several goals to further improve the usability and structure of our
