Use cli code blocks instead of shell

--- a/content/docs/studio/selfhosted/troubleshooting/502.md
+++ b/content/docs/studio/selfhosted/troubleshooting/502.md
@@ -15,7 +15,7 @@ before continuing.
 
 Let's get a list of the Studio components and their statuses:
 
-```shell
+```cli
 $ kubectl get pods -n studio
 ```
 
@@ -27,13 +27,13 @@ section.
 
 Delete the existing credentials:
 
-```shell
+```cli
 $ kubectl delete secret iterativeai -n studio
 ```
 
 Recreate the credentials:
 
-```shell
+```cli
 $ kubectl create secret docker-registry iterativeai \
     --namespace studio \
     --docker-server=docker.iterative.ai \
@@ -43,7 +43,7 @@ $ kubectl create secret docker-registry iterativeai \
 
 Now restart all Studio components using:
 
-```shell
+```cli
 $ kubectl rollout restart studio-beat -n studio
 $ kubectl rollout restart studio-webapi -n studio
 $ kubectl rollout restart studio-worker -n studio
@@ -52,7 +52,7 @@ $ kubectl rollout restart studio-webhook -n studio
 
 Wait a few seconds and then verify that the issue got resolved:
 
-```shell
+```cli
 $ kubectl get pods -n studio
 ```
 
