Fix troubleshooting commands for Studio Selfhosted

--- a/content/docs/studio/self-hosting/troubleshooting/502.md
+++ b/content/docs/studio/self-hosting/troubleshooting/502.md
@@ -44,10 +44,9 @@ $ kubectl create secret docker-registry iterativeai \
 Now restart all Studio components using:
 
 ```cli
-$ kubectl rollout restart studio-beat -n studio
-$ kubectl rollout restart studio-webapi -n studio
-$ kubectl rollout restart studio-worker -n studio
-$ kubectl rollout restart studio-webhook -n studio
+$ kubectl rollout restart deploy/studio-beat -n studio
+$ kubectl rollout restart deploy/studio-backend -n studio
+$ kubectl rollout restart deploy/studio-worker -n studio
 ```
 
 Wait a few seconds and then verify that the issue got resolved:
