Fix config in Studio Self-hosted docs

--- a/content/docs/studio/self-hosting/troubleshooting/502.md
+++ b/content/docs/studio/self-hosting/troubleshooting/502.md
@@ -47,6 +47,7 @@ Now restart all Studio components using:
 $ kubectl rollout restart deploy/studio-beat -n studio
 $ kubectl rollout restart deploy/studio-backend -n studio
 $ kubectl rollout restart deploy/studio-worker -n studio
+$ kubectl rollout restart deploy/studio-ui -n studio
 ```
 
 Wait a few seconds and then verify that the issue got resolved:
